--- a/src/profile.html
+++ b/src/profile.html
@@ -8,14 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS v5.2.1 -->
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/components.css">
@@ -38,7 +35,8 @@
             </a>
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./home-feed.html" aria-current="page"><i class="bi bi-house-door-fill"></i>
+                    <a class="nav-link active" href="./home-feed.html" aria-current="page"><i
+                            class="bi bi-house-door-fill"></i>
                         <span>Home</span></a>
                 </li>
                 <li class="nav-item">
@@ -46,19 +44,23 @@
                         <span>Search</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href=""  data-bs-toggle="modal" data-bs-target="#postThread" aria-current="page" aria-current="page"><i class="bi bi-plus-lg"></i>
+                    <a class="nav-link active" href="" data-bs-toggle="modal" data-bs-target="#postThread"
+                        aria-current="page" aria-current="page"><i class="bi bi-plus-lg"></i>
                         <span>Post</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./notifications.html" aria-current="page"><i class="bi bi-bell-fill"></i>
+                    <a class="nav-link active" href="./notifications.html" aria-current="page"><i
+                            class="bi bi-bell-fill"></i>
                         <span>Notification</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active " href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i>
+                    <a class="nav-link active " href="./cur-profile.html" aria-current="page"><i
+                            class="bi bi-person-circle"></i>
                         <span>Profile</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./index.html" aria-current="page"><i class="bi bi-arrow-bar-left"></i>
+                    <a class="nav-link active" href="./index.html" aria-current="page"><i
+                            class="bi bi-arrow-bar-left"></i>
                         <span>Logout</span></a>
                 </li>
             </ul>
@@ -126,8 +128,8 @@
                             </div>
 
                             <div class="card-footer bg-white border-top-0 p-0">
-                                <p class="d-inline-block"  data-bs-toggle="modal" data-bs-target="#replyThread"
-                                onclick="getImageOfThread(event)"><i class="bi bi-chat-left-text"></i> Replies</p>
+                                <p class="d-inline-block" data-bs-toggle="modal" data-bs-target="#replyThread"
+                                    onclick="getImageOfThread(event)"><i class="bi bi-chat-left-text"></i> Replies</p>
                                 <p class="d-inline-block"><i class="bi bi-heart"></i> Likes</p>
                             </div>
                         </div>
@@ -191,7 +193,8 @@
                             onclick="clearThreadForm()">
                             Close
                         </button>
-                        <button type="button" id="liveToastBtn" data-bs-dismiss="modal" onclick="closeModalAndTriggerToast(event)" class="btn btn-dark">Post</button>
+                        <button type="button" id="liveToastBtn" data-bs-dismiss="modal"
+                            onclick="closeModalAndTriggerToast(event)" class="btn btn-dark">Post</button>
                     </div>
                 </div>
             </div>
@@ -324,12 +327,12 @@
                 </div>
             </div>
         </div>
-        <div class="toast-container bottom-0 mb-2 start-50 translate-middle-x" >
+        <div class="toast-container bottom-0 mb-2 start-50 translate-middle-x">
             <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
-                <img src="./images/svg/logo.svg" class="me-2" alt="..." width="36px" height="36px">
-                <strong class="me-auto">Your thread is needled</strong>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    <img src="./images/svg/logo.svg" class="me-2" alt="..." width="36px" height="36px">
+                    <strong class="me-auto">Your thread is needled</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
                 <div class="toast-body">
                     <button type="button" class="btn btn-dark btn-sm">View now</button>
@@ -368,7 +371,7 @@
 
     <!-- Custom script -->
     <script src="./scripts/createReplyThreadController.js"></script>
-    <script src="/src/profile/profile-script.js"></script>
+    <script src="./profile/profile-script.js"></script>
 </body>
 
 </html>
